# zipcontainer

./: AGENTS.md  CMakeLists.txt  README.md  zipc.cpp  zipc.h  zipc_utility.h
tests/: stresstest.cpp  zipctest.cpp
tools/: zipcompare.cpp
