cmake_minimum_required(VERSION 3.10)
project(zipcontainer VERSION 0.0.1 DESCRIPTION "Zip file as uncompressed container library" LANGUAGES C CXX)
enable_testing()

if (NOT DEFINED CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 20)
endif()
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CTEST_ARGUMENTS "--output-on-failure")
set(SRC_ROOT ${PROJECT_SOURCE_DIR})

add_library(zipcontainer STATIC ${PROJECT_SOURCE_DIR}/zipc.cpp ${PROJECT_SOURCE_DIR}/zipc.h)
target_include_directories(zipcontainer PUBLIC ${PROJECT_SOURCE_DIR})
target_compile_options(zipcontainer PRIVATE -fPIC -Wall)

add_executable(zipctest tests/zipctest.cpp ${PROJECT_SOURCE_DIR}/zipc.cpp ${PROJECT_SOURCE_DIR}/zipc.h)
target_compile_definitions(zipctest PUBLIC TEXT_FILES_ZIP="${PROJECT_SOURCE_DIR}/tests/files/textfiles.zip")
target_compile_definitions(zipctest PUBLIC TEXT_FILES2_ZIP="${PROJECT_SOURCE_DIR}/tests/files/textfiles2.zip")
target_compile_definitions(zipctest PUBLIC COMPRESSED_ZIP="${PROJECT_SOURCE_DIR}/tests/files/compressed.zip")
target_compile_definitions(zipctest PUBLIC ENCRYPTED_ZIP="${PROJECT_SOURCE_DIR}/tests/files/encrypted.zip")
target_include_directories(zipctest PUBLIC ${PROJECT_SOURCE_DIR})
target_compile_options(zipctest PRIVATE -Wall)
add_test(NAME zipctest COMMAND ${CMAKE_CURRENT_BINARY_DIR}/zipctest)
set_tests_properties(zipctest PROPERTIES FIXTURES_SETUP testfile_zip)
add_test(NAME zipctest_result COMMAND zip -T ${CMAKE_CURRENT_BINARY_DIR}/testfile.zip)
set_tests_properties(zipctest_result PROPERTIES FIXTURES_REQUIRED testfile_zip)

add_executable(stresstest tests/stresstest.cpp ${PROJECT_SOURCE_DIR}/zipc.cpp ${PROJECT_SOURCE_DIR}/zipc.h)
target_include_directories(stresstest PUBLIC ${PROJECT_SOURCE_DIR})
target_compile_options(stresstest PRIVATE -Wall)
add_test(NAME stresstest COMMAND ${CMAKE_CURRENT_BINARY_DIR}/stresstest)

add_executable(zipcompare tools/zipcompare.cpp)
target_link_libraries(zipcompare PRIVATE zipcontainer)
target_include_directories(zipcompare PUBLIC ${PROJECT_SOURCE_DIR})
target_compile_options(zipcompare PRIVATE -Wall)
add_test(NAME zipcompare_same COMMAND ${CMAKE_CURRENT_BINARY_DIR}/zipcompare compare_first.zip compare_first.zip)
set_tests_properties(zipcompare_same PROPERTIES FIXTURES_REQUIRED testfile_zip)
add_test(NAME zipcompare_diff COMMAND ${CMAKE_CURRENT_BINARY_DIR}/zipcompare compare_first.zip compare_second.zip)
set_tests_properties(zipcompare_diff PROPERTIES FIXTURES_REQUIRED testfile_zip WILL_FAIL TRUE)
